CADC-8516 - named the main file composed, not composable.

--- a/scripts/config.yml
+++ b/scripts/config.yml
@@ -8,9 +8,11 @@ proxy_file_name: /usr/src/app/cadcproxy.pem
 # operational value is ivo://cadc.nrc.ca/ams
 # - modifies entries on sc2.canfar.net
 resource_id: ivo://cadc.nrc.ca/sc2repo
+# resource_id: ivo://cadc.nrc.ca/ams
 # operational value is ivo://cadc.nrc.ca/ams/shared
 # - queries entries on sc2.canfar.net
 tap_id: ivo://cadc.nrc.ca/sc2tap
+# tap_id: ivo://cadc.nrc.ca/ams/shared
 # file that contains the list of entries to process
 todo_file_name: todo.txt
 # values True False
@@ -19,7 +21,7 @@ todo_file_name: todo.txt
 # done.
 use_local_files: True
 # values DEBUG INFO WARNING ERROR
-logging_level: DEBUG
+logging_level: INFO
 # values True False
 log_to_file: True
 # fully qualified name for a directory to write log files
@@ -79,6 +81,7 @@ interval: 600
 # - modify - create a footprint and previews for an existing CAOM model record
 # - pull - put a file retrieved from a URL
 task_types: 
+  - store
   - ingest
 features:
   supports_composite: False
