--- a/setup.cfg
+++ b/setup.cfg
@@ -43,5 +43,5 @@ version = 0.1.0
 
 [entry_points]
 phangs2caom2 = phnags2caom2.main_app:phangs_main_app
-phangs_run = phangs2caom2.composable:run
-phangs_run_by_state = phangs2caom2.composable:run_by_state
+phangs_run = phangs2caom2.composed:run
+phangs_run_by_state = phangs2caom2.composed:run_by_state
